src/App.css
/* ... */
.Astronomy-NewMoon {
    background: url(img/new-moon.jpg) fixed no-repeat bottom;
    background-size: cover;
    background-position: 50% 30%;
}

.Astronomy-WaxingCrescent {
    background: url(img/moon-waxing-crescent.jpg) fixed no-repeat top;
    background-size: cover;
    background-position: 45% 10%;
}

.Astronomy-FirstQuarter {
    background: url(img/moon-first-quarter.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 25% 100%;
}

.Astronomy-WaxingGibbous {
    background: url(img/moon-waxing-gibbous.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 50% 70%;
}

.Astronomy-FullMoon {
    background: url(img/moon-full.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 25% 25%;
}

.Astronomy-WaningGibbous {
    background: url(img/moon-waning-gibbous.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}

.Astronomy-LastQuarter {
    background: url(img/moon-last-quarter.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 75% 55%;
}

.Astronomy-WaningCrescent {
    background: url(img/moon-waning-crescent.jpg) fixed no-repeat;
    background-size: cover;
    background-position: 80% 75%;
}



/*
+ Search
*/

form {
    left: 0;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    right: 0;
    text-align: center;
    top: 35vh;
    width: 50%;
}

.form_content {
    position:relative;
}



/*
+ Input
*/

.search_icon,
.close_icon {
    cursor: pointer;
    position: absolute;
}

.search_icon {
    left: 14px;
    top: 10px;
    width: 35px;
}

.close_icon {
    right: 14px;
    top: 18px;
    width: 20px;
}

input {
    font-family: 'Nunito', sans-serif;
    margin: 1.2rem 0;
}

input[type='text'] {
    border: none;
    border-radius: 4px;
    display: block;
    font-size: 1.2rem;
    letter-spacing: 1px;
    padding: 1rem 1rem 1rem 4rem;
    width: 100%;
}

input[type='text']:focus {
    background-color: rgb(245, 235, 245);
}

input[type='submit'],
button {
    font: inherit;
    font-size: 1rem;
    padding: 0.6rem;
}



/*
+ Button
*/
.button {
    background: var(--white);
    border: none;
    border-radius: 4px;
    color: var(--dark_grey);
    cursor: pointer;
    display: inline-block;
    font-size: 0.5rem;
    outline: none;
    padding: 0.4rem 1.3rem;
}

.button_block {
    display: block;
    margin: auto;
    width: 25%;
}

.button_search {
    background: var(--blue);
    color: var(--white);
    margin: 4vh auto 2vh;
}

.button_search:hover {
    opacity: 0.95;
}

.button_clear {
    background: var(--orange);
    color: var(--white);
    font-size: 1rem;
    padding: 0.6rem;
}

.button_clear:hover {
    opacity: 0.9;
}

.button_index,
.button_home {
    background: var(--blue);
    border: none;
    border-radius: 4px;
    color: var(--white);
    cursor: pointer;
    display: block;
    font-size: 1rem;
    margin-bottom: 7vh;
    outline: none;
    padding: 0.6rem;
    min-width: 20%;
}

.button_index {
    margin: 100px auto;
}

.button_home {
    display: inline-block;
    margin: 0;
    width: 12rem;
}

.button_ok,
.button_abort_search{
    background: var(--blue);
    color: var(--white);
    font-size: 1rem;
    margin: 3vh;
    min-width: 20%;
}

.button_to_top,
.button_to_left {
    background-color: rgba(255, 255, 255, 0.01);
    font-size: 1rem;
    padding: 0;
}

.button_to_top a,
.button_to_left a {
    display: inline-block;
}



/*
+ BackToSearch
+ ScrollToTop
*/

.scroll_buttons {
    display: flex;
    justify-content: center;
}

.BackToSearch img,
.ScrollToTop img {
    margin: 5px;
    width: 52px;
}

.BackToSearch p,
.ScrollToTop p {
    font-size: 1.2rem;
    font-weight: bold;
    letter-spacing: 0.05rem;
    margin: 5px;
}

.ScrollToTopHomepage {
    cursor: pointer;
    width: 100%;
}

.ScrollToTopHomepage_light {
    background-color: var(--white);
}

.ScrollToTopHomepage_dark {
    /*background: #360D4B;*/
}

.ScrollToTopHomepage .main {
    align-items: center;
    display: flex;
    height: 100px;
    justify-content: space-between;
}

.ScrollToTopHomepage .arrow {
    /*display: flex;*/
    /*height: 100%;*/
    /*outline: 0;*/
    /*overflow: hidden;*/
    /*padding: 20px;*/
    /*position: relative;*/
    /*width: 100px;*/
}

.ScrollToTopHomepage_light .arrow {
    display: flex;
    height: 100%;
    outline: 0;
    overflow: hidden;
    padding: 20px;
    position: relative;
    width: 100px;
}

.ScrollToTopHomepage_dark .arrow {
    /*display: flex;*/
    /*height: 80px;*/
    height: 100%;
    outline: 0;
    overflow: hidden;
    /*padding: 20px;*/
    position: relative;
    /*width: 50px;*/
    width: 100px;
    /*margin-bottom: 80px;*/
}

.ScrollToTopHomepage_light .arrow::before {
    align-items: center;
    content: url(./img/arrow-up.svg);
    color: var(--white);
    display: flex;
    width: 100%;
}

.ScrollToTopHomepage_dark .arrow::before {
    align-items: center;
    content: url(./img/arrow-up-dark.svg);
    display: flex;
    width: 100%;
    /*background: #360D4B;*/
}

.ScrollToTopHomepage .arrow::after {
}

.ScrollToTopHomepage_light .arrow::after {
    background-color: var(--white);
    animation: arrowAnimation 6s ease-in-out infinite;
    border-radius: 45%;
    bottom: -50%;
    content: "";
    height: 200%;
    left: -50%;
    position: absolute;
    width: 200%;
}

.ScrollToTopHomepage_dark .arrow::after {
    /*background: #360D4B;*/
    animation: arrowAnimation 6s ease-in-out infinite;
    border-radius: 45%;
    bottom: -50%;
    content: "";
    height: 200%;
    left: -50%;
    position: absolute;
    width: 200%;

}

.ScrollToTopHomepage p {
    font-size: 1.6rem;
    outline: 0;
    overflow: hidden;
    position: relative;
    text-transform: uppercase;
}
/* ... */

